k8s/apps/chain/chain.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anki-convo-chain-deployment
  namespace: anki-convo-chain
  labels:
    app: anki-convo-chain
spec:
  replicas: 3
  selector:
    matchLabels:
      app: anki-convo-chain
  template:
    metadata:
      labels:
        app: anki-convo-chain
    spec:
      containers:
      - name: anki-convo-chain
        image: mathijsvdv/anki-convo-chain
        ports:
        - containerPort: 8800
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: anki-convo-chain-service
  namespace: anki-convo-chain
spec:
  ports:
  - port: 80
    targetPort: 8800
    protocol: TCP
  type: NodePort
  selector:
    app: anki-convo-chain
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anki-convo-chain-ingress
  namespace: anki-convo-chain
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
spec:
  ingressClassName: alb
  rules:
    - host: ankiconvo.mvdvlies.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anki-convo-chain-service
                port:
                  number: 80
